<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/item_card_view"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="8dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cardLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/greyTint">

            <ImageView
                android:id="@+id/itemimg"
                android:layout_width="100dp"
                android:layout_height="124dp"
                android:layout_marginVertical="4dp"
                android:layout_marginStart="8dp"
                android:contentDescription="Product Image"
                android:src="@drawable/sample_item_image"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/itemName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/seg_ui_semibold"
                android:text="@string/item_name"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/itemimg"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvprice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/seg_ui_semibold"
                android:text="@string/price"
                android:textSize="16sp"
                app:layout_constraintStart_toEndOf="@+id/itemimg"
                app:layout_constraintTop_toBottomOf="@id/itemName" />

            <TextView
                android:id="@+id/tvrs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/seg_ui_regular"
                android:layout_marginStart="5dp"
                android:text="@string/rs"
                android:textSize="14sp"
                android:textStyle="italic"
                app:layout_constraintBottom_toBottomOf="@+id/tvprice"
                app:layout_constraintStart_toEndOf="@+id/tvprice"
                app:layout_constraintTop_toTopOf="@+id/tvprice" />

            <TextView
                android:id="@+id/itemPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/seg_ui_regular"
                android:minWidth="100dp"
                android:text="@string/_150_00"
                android:textSize="14sp"
                android:textStyle="italic"
                app:layout_constraintBottom_toBottomOf="@+id/tvrs"
                app:layout_constraintStart_toEndOf="@id/tvrs"
                app:layout_constraintTop_toTopOf="@+id/tvrs" />

            <RelativeLayout
                android:id="@+id/quantityLayout"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_margin="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/itemPrice">

                <ImageButton
                    android:id="@+id/btn_minus"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginHorizontal="6dp"
                    android:contentDescription="@string/minus_button"
                    android:src="@drawable/ic_minus" />

                <TextView
                    android:id="@+id/item_quantity"
                    android:layout_width="48dp"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginHorizontal="6dp"
                    android:layout_toEndOf="@id/btn_minus"
                    android:text="@string/_0"
                    android:textAlignment="center"
                    android:textSize="24sp" />

                <ImageButton
                    android:id="@+id/btn_plus"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginHorizontal="6dp"
                    android:layout_toEndOf="@id/item_quantity"
                    android:contentDescription="@string/plus_button"
                    android:src="@drawable/ic_plus" />

            </RelativeLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout><!--
            android:backgroundTint="@color/background"-->